[ G3 ][ Bug fix ] Fix layout issues with wide and full-width blocks when using a two-column site layout.

--- a/_g3/assets/_scss/_common-theme-json.scss
+++ b/_g3/assets/_scss/_common-theme-json.scss
@@ -16,7 +16,7 @@
 // 通常幅の中の要素の時（ 通常幅 > .is-layout-constrained > .alignwide ）にマイナスオフセットする必要があるが、
 // カバーブロックでは第一階層の alignfull, alignwide に直接 .is-layout-constrained がついてしまうので、
 // alignfull, alignwide を除外している
-*:where(:not(.alignfull,.alignwide)) > .is-layout-constrained:where(:not(.alignfull,.alignwide)) > .alignwide {
+.main-section:where(:not( .main-section--col--two,.sub-section--col--two )) *:where(:not(.alignfull,.alignwide)) > .is-layout-constrained:where(:not(.alignfull,.alignwide)) > .alignwide {
 		margin-left: calc( ( 100% - var(--vk-width-full) ) / 4 ) !important;
 		margin-right: calc( ( 100% - var(--vk-width-full) ) / 4 ) !important;
 }
